--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
+    <link rel="manifest" href="./manifest.json">
+
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <title>Text to Image</title>
   </head>
   <body>
