--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
     <link rel="manifest" href="./manifest.json">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <title>Text to Image</title>
